# ebs-milestone-2

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TODO.md  docker-compose.yaml  dumpdata.json  pyproject.toml
.github/workflows/: django.yml
apps/common/: tests.py  views.py
apps/common/fixtures/: users.json
apps/common/management/commands/: healthcheck.py
apps/common/static/common/css/: style.css
apps/tasks/: admin.py  apps.py  documents.py  exceptions.py  filters.py  models.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py
apps/tasks/management/commands/: db-populate-comments.py  db-populate-tasks.py  db-populate-time-logs.py  db-populate-users.py  db-populate.py  db_populate.py  email-stress-test.py  initialize_buckets.py  user-fixture.py
apps/tasks/migrations/: 0001_initial.py  0002_alter_task_title.py  0002_alter_taskattachment_file.py  0002_initial.py  0003_comment_user.py  0003_rename_file_taskattachment_image.py  0003_taskattachment.py  0004_alter_comment_task.py  0004_remove_taskattachment_image_taskattachment_file_and_more.py  0004_timelog.py  0005_remove_timelog_end_time.py  0005_taskattachment_file_upload_url.py  0006_alter_taskattachment_file_upload_url.py  0006_alter_timelog_duration.py  0007_alter_taskattachment_file_upload_url.py
apps/tasks/templates/tasks/: tasks_email.html
apps/users/: admin.py  auth_backend.py  serializers.py  tests.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
apps/users/static/users/css/: profile.css
config/: celery.py  settings.py  urls.py
fixtures/: comments.json  tasks.json  timelogs.json  users.json
templates/: 404.html  profile.html
