[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ebs-milestone-2"
version = "0.1.0"
description = ""
authors = ["none"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.9"
djangorestframework = "^3.15.2"
drf-spectacular = "^0.27.2"
django-cors-headers = "^4.4.0"
djangorestframework-simplejwt = "^5.3.1"
django-redis = "^5.4.0"
celery = "^5.4.0"
django-celery-results = "^2.5.1"
gunicorn = "^23.0.0"
django-minio-backend = "^3.7.2"
django-celery-beat = "^2.7.0"
django-elasticsearch-dsl = "^8.0"
elasticsearch-dsl = "^8.15.4"
django-allauth = {extras = ["socialaccount"], version = "^65.1.0"}
requests = "^2.32.3"
pillow = "^11.0.0"
minio = "^7.2.10"
django-filter = "^24.3"


[tool.poetry.group.dev.dependencies]
coverage = "^7.6.3"
ruff = "^0.6.9"
pre-commit = "^4.0.1"

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = [
    "**/admin.py",
    "config/*",
    "manage.py",
    "def __str__",
    "def __str__(self) -> str:",
    ]

[tool.coverage.report]
exclude_also  = [
    "def __str__",
    ]